WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148151
CAOpenGLLayer doesn't need an SPI declaration
https://bugs.webkit.org/show_bug.cgi?id=148151
Summary
CAOpenGLLayer doesn't need an SPI declaration
Dean Jackson
Reported
2015-08-18 16:38:32 PDT
CAOpenGLLayer needs a named class extension for non-internal installs
Attachments
Patch
(1.40 KB, patch)
2015-08-18 16:40 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(1.46 KB, patch)
2015-08-18 17:15 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-08-18 16:39:22 PDT
<
rdar://problem/22335111
>
Dean Jackson
Comment 2
2015-08-18 16:40:12 PDT
Created
attachment 259317
[details]
Patch
mitz
Comment 3
2015-08-18 16:54:10 PDT
(In reply to
comment #0
)
> CAOpenGLLayer needs a named class extension for non-internal installs
There’s no such thing as a named class extension :|
Dean Jackson
Comment 4
2015-08-18 17:01:54 PDT
Committed
r188608
: <
http://trac.webkit.org/changeset/188608
>
Dean Jackson
Comment 5
2015-08-18 17:15:30 PDT
Reopening to attach new patch.
Dean Jackson
Comment 6
2015-08-18 17:15:34 PDT
Created
attachment 259325
[details]
Patch
Dean Jackson
Comment 7
2015-08-18 17:22:35 PDT
Committed
r188610
: <
http://trac.webkit.org/changeset/188610
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug