CAOpenGLLayer needs a named class extension for non-internal installs https://bugs.webkit.org/show_bug.cgi?id=148151 <rdar://problem/22335111>

Reviewed by Tim Horton.

In order to build using the public SDK on El Capitan, we can't
use a class extension to declare this SPI.

No change in behaviour, so no new tests.

* platform/spi/cocoa/QuartzCoreSPI.h:

Canonical link: https://commits.webkit.org/166266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188608 268f45cc-cd09-0410-ab3c-d52691b4dbfc